new favicon and link test

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
-    <link rel="icon" href="/favicon/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon/android-chrome-512x512.png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
@@ -76,7 +76,7 @@
 <body>
     <ul class="top-navigation-bar">
         <li><a class="container display-font" href="#projects">PROJECTS</a></li>
-        <li><a class="container display-font" href="#games">GAMES</a></li>
+        <li><a class="container display-font" href="games.html">GAMES</a></li>
         <li><a class="container display-font" href="#contact">CONTACT</a></li>
         <li><a class="container display-font" href="#bio">BIO</a></li>
     </ul>
